--- a/index.html
+++ b/index.html
@@ -1,96 +1,96 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>Iván Moreno Zambudio | Desarrollador de software en Murcia</title>
-  <meta name="description" content="Iván Moreno. Desarrollador de software en Murcia.">
-  <meta name="author" content="Iván Moreno Zambudio">
-  <meta property="og:title" content="Iván Moreno Zambudio" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ivanmz.com" />
-  <meta property="og:image" content="https://ivanmz.com/assets/ivan.jpg" />
-  <link rel="icon" href="assets/img/ivan32x32.jpg" sizes="32x32">
-  <link rel="icon" href="assets/img/ivan192x192.jpg" sizes="192x192">
-  <link rel="apple-touch-icon" href="assets/img/ivan180x180.jpg">
-  <meta name="msapplication-TileImage" content="assets/img/ivan270x270.jpg">
-  <link rel="stylesheet" href="assets/styles.css">
+    <meta charset="utf-8">
+    <title>Iván Moreno Zambudio | Desarrollador de software en Murcia</title>
+    <meta name="description" content="Iván Moreno. Desarrollador de software en Murcia.">
+    <meta name="author" content="Iván Moreno Zambudio">
+    <meta property="og:title" content="Iván Moreno Zambudio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ivanmz.com" />
+    <meta property="og:image" content="https://ivanmz.com/assets/ivan.jpg" />
+    <link rel="icon" href="assets/img/ivan32x32.jpg" sizes="32x32">
+    <link rel="icon" href="assets/img/ivan192x192.jpg" sizes="192x192">
+    <link rel="apple-touch-icon" href="assets/img/ivan180x180.jpg">
+    <meta name="msapplication-TileImage" content="assets/img/ivan270x270.jpg">
+    <link rel="stylesheet" href="assets/styles.min.css">
 </head>
 <body>
-    <div id="wrapper">
-	  <header>
-		<div class="header-container">
-			<div class="left">
-				<img id="selfie" src="assets/img/ivan.jpg" alt="Foto de Iván"/>
-			</div>
-			<div class="right">
-				<h1 id="name">Iván Moreno Zambudio</h1>
-				<p>Desarrollador de software en Murcia</p>
-				<ul id="links">
-					<!--<li><a target="_blank" href="assets/CV.pdf">Curriculum</a></li>!-->
-					<li><a target="_blank" href="https://www.linkedin.com/in/iv%C3%A1n-moreno-zambudio-98a534205/">LinkedIn</a></li>
-					<li><a target="_blank" href="https://github.com/ivanmoreno">GitHub</a></li>
-					<li><a target="_blank" href="mailto:ivan@ivanmz.com">Email</a></li>
-				</ul>
-			</div>
-		</div>
-      </header>
-	<div class="section">
+<div id="wrapper">
+    <header>
+        <div class="header-container">
+            <div class="left">
+                <img id="selfie" src="assets/img/ivan.jpg" alt="Foto de Iván"/>
+            </div>
+            <div class="right">
+                <h1 id="name">Iván Moreno Zambudio</h1>
+                <p>Desarrollador de software en Murcia</p>
+                <ul id="links">
+                    <!--<li><a target="_blank" href="assets/CV.pdf">Curriculum</a></li>!-->
+                    <li><a target="_blank" href="https://www.linkedin.com/in/iv%C3%A1n-moreno-zambudio-98a534205/">LinkedIn</a></li>
+                    <li><a target="_blank" href="https://github.com/ivanmoreno">GitHub</a></li>
+                    <li><a target="_blank" href="mailto:ivan@ivanmz.com">Email</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="section">
         <h2>👋 ¡Hola!</h2>
         <p>Me llamo Iván y actualmente estoy haciendo el TFG del Grado de Ingeniería Informática de la UMH.</p>
-		<p>Estoy interesado en el desarrollo de apps móviles nativas, programación de backend y administración de redes y servidores.</p>
-		<p></p>
-      </div>
-      <div class="section">
+        <p>Estoy interesado en el desarrollo de apps móviles nativas, programación de backend y administración de redes y servidores.</p>
+        <p></p>
+    </div>
+    <div class="section">
         <h2>🧠 Conocimientos</h2>
         <ul>
-          <li>Programación para servidores web en <span class="featured">PHP (incluyendo Laravel)</span></li>
-          <li>Desarrollo móvil nativo en <span class="featured">iOS y Android</span></li>
-          <li>Administración de servidores <span class="featured">Linux (entornos LAMP/LEMP)</span></li>
-          <li>Control de versiones con <span class="featured">Git</span>.</li>
-          <li>Bases de datos <span class="featured">MySQL</span></li>
-          <li>Scripting con <span class="featured">Python</span></li>
+            <li>Programación para servidores web en <span class="featured">PHP (incluyendo Laravel)</span></li>
+            <li>Desarrollo móvil nativo en <span class="featured">iOS y Android</span></li>
+            <li>Administración de servidores <span class="featured">Linux (entornos LAMP/LEMP)</span></li>
+            <li>Control de versiones con <span class="featured">Git</span>.</li>
+            <li>Bases de datos <span class="featured">MySQL</span></li>
+            <li>Scripting con <span class="featured">Python</span></li>
         </ul>
-      </div>
-      <div class="section">
+    </div>
+    <div class="section">
         <h2>💼 Experiencia</h2>
-		<h3 class="entrada-experiencia">Servicio de Comunicación Universidad Miguel Hernández</h3>
-		<p class="detalle">Septiembre 2019 - Abril 2020</p>
-		<p>Desarrollé <span class="featured">aplicaciones web</span> para mostrar en el CCTV de la universidad. Una de ellas fue para los horarios de cercanías de Renfe, para la cual hice <span class="featured">scrapping</span> de la web oficial. También desarrollé una <span class="featured">guía para implementar una solución autoalojada (Xibo) para el CCTV</span>, ya que cuando empecé mi periodo de prácticas estaba contratado con una empresa externa.</p>
-		<h3 class="entrada-experiencia">SIATDI UMH</h3>
-		<p class="detalle">Febrero 2016 - Julio 2017</p>
-		<p>Me encargué del desarrollo de diversas apps híbridas para móvil, entre las que se incluían la <span class="featured">app oficial de la UMH</span> y una app plantilla para contenidos de formación. Desarrollé un servidor en PHP para gestionar la compilación estas aplicaciones plantilla y facilitar el despliegue lo máximo posible.</p>
-      </div>
-      <div class="section">
+        <h3 class="entrada-experiencia">Servicio de Comunicación Universidad Miguel Hernández</h3>
+        <p class="detalle">Septiembre 2019 - Abril 2020</p>
+        <p>Desarrollé <span class="featured">aplicaciones web</span> para mostrar en el CCTV de la universidad. Una de ellas fue para los horarios de cercanías de Renfe, para la cual hice <span class="featured">scrapping</span> de la web oficial. También desarrollé una <span class="featured">guía para implementar una solución autoalojada (Xibo) para el CCTV</span>, ya que cuando empecé mi periodo de prácticas estaba contratado con una empresa externa.</p>
+        <h3 class="entrada-experiencia">SIATDI UMH</h3>
+        <p class="detalle">Febrero 2016 - Julio 2017</p>
+        <p>Me encargué del desarrollo de diversas apps híbridas para móvil, entre las que se incluían la <span class="featured">app oficial de la UMH</span> y una app plantilla para contenidos de formación. Desarrollé un servidor en PHP para gestionar la compilación estas aplicaciones plantilla y facilitar el despliegue lo máximo posible.</p>
+    </div>
+    <div class="section">
         <h2>🎒 Educación</h2>
         <ul>
-          <li>Grado en Ingeniería Informática en Tecnologías de la Información
-		  <ul>
-                  <li>Todas las asignaturas aprobadas. <span class="featured">Actualmente realizando el TFG.</span></li>
-				  <li>Matrícula de Honor en Redes de Computadores y Desarrollo de Aplicaciones para Dispositivos Móviles.</li>
+            <li>Grado en Ingeniería Informática en Tecnologías de la Información
+                <ul>
+                    <li>Todas las asignaturas aprobadas. <span class="featured">Actualmente realizando el TFG.</span></li>
+                    <li>Matrícula de Honor en Redes de Computadores y Desarrollo de Aplicaciones para Dispositivos Móviles.</li>
                 </ul>
-				</li>
+            </li>
         </ul>
-      </div>
-      <div class="section">
+    </div>
+    <div class="section">
         <h2>🤓 Educación autodidacta</h2>
         <ul>
-          <li>Desarrollo en <span class="featured">Swift</span> y frameworks nativos de Apple (SwiftUI, UIKit)</li>
-          <li>Administración de NAS de la marca Synology</li>
+            <li>Desarrollo en <span class="featured">Swift</span> y frameworks nativos de Apple (SwiftUI, UIKit)</li>
+            <li>Administración de NAS de la marca Synology</li>
         </ul>
-      </div>
-	  
-	   <div class="section">
+    </div>
+
+    <div class="section">
         <h2>💀 Proyectos abandonados</h2>
         <ul>
-          <li>Tranvia de Murcia: app nativa de iOS en Swift para consultar los horarios del TDM.</li>
-          <li>Castiguito: bot de Telegram en Laravel para consultar información del videojuego Destiny 2.</li>
-		  <li><a href="https://github.com/ivanmoreno/Wake-on-Lan" target="_blank" class="featured">Wake on Lan</a>: app en SwiftUI para macOS que permite enviar paquetes WOL.</li>
+            <li>Tranvia de Murcia: app nativa de iOS en Swift para consultar los horarios del TDM.</li>
+            <li>Castiguito: bot de Telegram en Laravel para consultar información del videojuego Destiny 2.</li>
+            <li><a href="https://github.com/ivanmoreno/Wake-on-Lan" target="_blank" class="featured">Wake on Lan</a>: app en SwiftUI para macOS que permite enviar paquetes WOL.</li>
         </ul>
-      </div>
-      <footer>
-      <p>© 2021 Iván Moreno Zambudio</p>
-	  <p>Actualizado el 13/02/2021 a las 12:36</p>
-      </footer>
     </div>
+    <footer>
+        <p>© 2021 Iván Moreno Zambudio</p>
+        <p>Actualizado el 13/02/2021 a las 12:36</p>
+    </footer>
+</div>
 </body>
 </html>
