--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Desarrollador de software en Murcia</p>
                 <ul id="links">
                     <!--<li><a target="_blank" href="assets/CV.pdf">Curriculum</a></li>!-->
-                    <li><a target="_blank" href="https://www.linkedin.com/in/iv%C3%A1n-moreno-zambudio-98a534205/">LinkedIn</a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/ivan-moreno-zambudio">LinkedIn</a></li>
                     <li><a target="_blank" href="https://github.com/ivanmoreno">GitHub</a></li>
                     <li><a target="_blank" href="mailto:ivan@ivanmz.com">Email</a></li>
                 </ul>
