--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>Desarrollé <span class="featured">aplicaciones web</span> para mostrar en el CCTV de la universidad. Una de ellas fue para los horarios de cercanías de Renfe, para la cual hice <span class="featured">scrapping</span> de la web oficial. También desarrollé una <span class="featured">guía para implementar una solución autoalojada (Xibo) para el CCTV</span>, ya que cuando empecé mi periodo de prácticas estaba contratado con una empresa externa.</p>
         <h3 class="entrada-experiencia">SIATDI UMH</h3>
         <p class="detalle">Febrero 2016 - Julio 2017</p>
-        <p>Me encargué del desarrollo de diversas apps híbridas para móvil, entre las que se incluían la <span class="featured">app oficial de la UMH</span> y una app plantilla para contenidos de formación. Desarrollé un servidor en PHP para gestionar la compilación estas aplicaciones plantilla y facilitar el despliegue lo máximo posible.</p>
+        <p>Me encargué del desarrollo de diversas apps híbridas para móvil, entre las que se incluían la <span class="featured">app oficial de la UMH</span> y una app plantilla para contenidos de formación. Desarrollé un servidor en PHP para gestionar la compilación de estas aplicaciones plantilla y facilitar el despliegue lo máximo posible.</p>
     </div>
     <div class="section">
         <h2>🎒 Educación</h2>
