--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 id="name">Iván Moreno Zambudio</h1>
                 <p>Desarrollador de software en Murcia</p>
                 <ul id="links">
-                    <!--<li><a target="_blank" href="assets/CV.pdf">Curriculum</a></li>!-->
+                    <li><a target="_blank" href="assets/CV-Ivan-Moreno.pdf.pdf">Curriculum</a></li>
                     <li><a target="_blank" href="https://www.linkedin.com/in/ivan-moreno-zambudio">LinkedIn</a></li>
                     <li><a target="_blank" href="https://github.com/ivanmoreno">GitHub</a></li>
                     <li><a target="_blank" href="mailto:ivan@ivanmz.com">Email</a></li>
